map on mobile fixed

--- a/spana-app/web/IWAD-app/src/app/components/map/map.scss
+++ b/spana-app/web/IWAD-app/src/app/components/map/map.scss
@@ -49,7 +49,7 @@
 
 @media only screen and (max-width: 500px) {
     #mapid {
-      width: 280px;
+      // width: 280px;
       height: 400px;
     }
 }
